# Murshid

./: .env.example  .gitignore  MURSHID_KICKOFF.md  README.md  SUBMISSION_NOTE.md  conftest.py  demo_output.txt  pyproject.toml  requirements.txt
bench/: case-cache.json  cost-log.jsonl  refusal-log.jsonl  results.md
bench/archive/: case-cache-gemini-pro.json  results-gemini-pro-focused.md  results-phase3-snapshot.md
data/: gold_answers.json  questions.json  red_team.json  sources.json
docs/: AI_JOURNAL.md  ARCHITECTURE.md  CREATIVE.md  WORKING_LOG.md
planning/: PLANNING_LOG.md  PLAN_SUMMARY.md  REVIEW_PROMPT_ROUND1.md  REVIEW_PROMPT_ROUND2.md  REVIEW_PROMPT_ROUND3.md
scripts/: debug_judge.py  demo.py  seed_bench.py  ui.py  verify_keys.py
src/murshid/: __init__.py  critic.py  hijri.py  ingest.py  normalize.py  pipeline.py  prompts.py  register.py  retrieve.py  rewrite.py  router.py
src/murshid/bench/: __init__.py  __main__.py  metrics.py  runner.py
src/murshid/providers/: __init__.py  base.py  claude.py  falcon_arabic.py  gemini.py  mock.py  openai.py
tests/: test_arabic_indic_digits.py  test_bench_metrics.py  test_hijri.py  test_ingest.py  test_normalization.py  test_pipeline.py  test_prompts.py  test_provider_retry.py  test_register.py  test_router.py  test_support_gate.py
